feat: estandarización 100% de microservicios (Seguridad, HATEOAS, JSR 380 y Excepciones)